# adlc-kgs

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: main.yml
examples/: 05d09-dispo.ttl  05d09-dispo.txt  09d04-dispo.ttl  09d04-dispo.txt  09d04-intro.ttl  09d04-intro.txt
input/: .gitignore  14d05-dispo.txt
ontologies/: ontology-dispo.ttl  ontology-intro.ttl
src/: agents.py  main.py  tasks.py  tools.py  utils.py
tests/: test_utils.py
