[tool.poetry]
name = "adlc_kgs"
version = "0.0.1"
description = "ADLC generating and leveraging KGs."
authors = [
    "Tommaso Bianco <tommaso.bianco@gmail.com>",
    "Arnold Vialfont <arnold.vialfont@u-pec.fr>"
]
repository = "https://github.com/atomobianco/adlc-kgs"
documentation = "https://atomobianco.github.io/adlc-kgs/"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
crewai = { extras = ["tools"], git = "https://github.com/atomobianco/crewAI.git", branch = "with-system-messages" }
ontologist = "^0.1.1"
rdflib = "^7.1.3"
langchain-groq = "^0.1.0"
langchain-anthropic = "^0.1.7"
pydantic = "2.6.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
deptry = "^0.21.2"
mypy = "^1.5.1"
pre-commit = "^4.0.1"
tox = "^4.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
